<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arduino Bluetooth Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_scan">Scan Device</string>
    <string name="send">Send</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving.</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected to %1$s</string>
    <string name="title_not_connected">Not connected</string>
    <!-- DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <!-- Exit Dialog -->
    <string name="exit_dialog_message">Do you want to quit?</string>
    <string name="exit_dialog_yes">Yes</string>
    <string name="exit_dialog_no">No</string>
    <!-- Connection -->
    <string name="connected">Connected</string>
    <string name="nightstand">nightstand</string>
    <string name="power">Power</string>

</resources>