<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.co.vismart.app.quadcontrol.MainActivity" >

    <item
        android:id="@+id/action_power"
        android:icon="@drawable/ic_power_white_24dp"
        android:orderInCategory="100"
        android:title="@string/power"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/secure_connect_scan"
        android:icon="@drawable/bluetooth"
        android:showAsAction="ifRoom|withText"
        android:title="@string/secure_connect"/>
    <item
        android:id="@+id/insecure_connect_scan"
        android:showAsAction="ifRoom|withText"
        android:title="@string/insecure_connect"/>
    <item
        android:id="@+id/discoverable"
        android:showAsAction="ifRoom|withText"
        android:title="@string/discoverable"/>

</menu>